--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
     "daisyui": "^5.0.19",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "theme-change": "^2.5.0"
   }
 }
